# dbgcopilot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
configs/: default.yaml  llm_providers.json  prompts.json
dbgagent/: README.md  pyproject.toml
dbgagent/src/dbgagent/: cli.py  prompts.py  runner.py
dbgweb/: __init__.py
dbgweb/app/: __init__.py  main.py
dbgweb/app/api/: routes.py
dbgweb/app/services/: session_manager.py
dbgweb/static/: app.js  index.html  styles.css
docs/: SESSION_NOTES.md  UNDER.md  autonomous.md  gdb.md  install.md  llm.md  notes.md  project-layout.md  publishing.md
docs/media/: README.md
examples/: Makefile
examples/crash/c/: Makefile  crash.c
examples/crash/go/: Makefile  crash.go  go.mod
examples/crash/java/: Crash.java  Makefile  README.md
examples/crash/python/: README.md  crash.py
examples/crash/rust/: Cargo.toml  Makefile  README.md
examples/crash_demo/: Makefile  crash  crash.c
examples/hang/c/: Makefile  hang.c
examples/hang/go/: Makefile  go.mod  hang.go
examples/hang/java/: Hang.java  Makefile  README.md
examples/hang/python/: README.md  hang.py
examples/hang/rust/: Cargo.toml  Makefile  README.md
plugins/gdb/: copilot_cmd.py  repl.py
src/dbgagent/: README.md  pyproject.toml
src/dbgagent/src/dbgagent/: __init__.py  cli.py  runner.py
src/dbgcopilot/: __init__.py  cli.py  gdbwrap.py  lldbwrap.py
src/dbgcopilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dbgcopilot/backends/: base.py  delve_subprocess.py  gdb_inprocess.py  gdb_subprocess.py  java_jdb.py  lldb_api.py  lldb_inprocess.py  lldb_rust.py  lldb_rust_api.py  lldb_subprocess.py  python_debugpy.py  python_pdb.py  radare2_subprocess.py  rust_gdb.py
src/dbgcopilot/core/: orchestrator.py  report.py  state.py
src/dbgcopilot/llm/: openai_compat.py  openrouter.py  params.py  providers.py
src/dbgcopilot/plugins/: __init__.py
src/dbgcopilot/prompts/: defaults.py  suggest_commands.md  (+1 more)
tests/: test_radare2_fixes.py  test_smoke_structure.py
tools/: lldb_capture.py
(+19 files in other folders)
