[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbgcopilot"
version = "0.0.1"
description = "Debugger Copilot POC for GDB, LLDB, Delve, Radare2, jdb, and pdb"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Debugger Copilot" }]
license = { text = "Apache-2.0 WITH LLVM-exception" }
dependencies = [
	"requests>=2.28",
	"pexpect>=4.8",
	"fastapi>=0.110",
	"uvicorn[standard]>=0.30",
	"r2pipe>=1.9",
]

[project.urls]
Home = "https://github.com/oldzhu/dbgcopilot"

[project.scripts]
dbgcopilot-plugin-path = "dbgcopilot.cli:print_plugin_path"
dbgcopilot-gdb = "dbgcopilot.gdbwrap:main"
dbgcopilot-lldb = "dbgcopilot.lldbwrap:main"
dbgcopilot = "dbgcopilot.repl.standalone:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
