[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbgagent"
version = "0.0.1"
description = "Autonomous debugging agent for GDB, LLDB, Delve, Radare2, jdb, and pdb"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Debugger Copilot" }]
license = { text = "Apache-2.0 WITH LLVM-exception" }
dependencies = [
    "dbgcopilot>=0.0.1",
    "requests>=2.28",
    "pexpect>=4.8",
]

[project.urls]
Home = "https://github.com/oldzhu/dbgcopilot"

[project.scripts]
dbgagent = "dbgagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
